# SOT

./: .gitignore  CMakeLists.txt
include/sot_bits/: adaptive_sampling.h  dds.h  experimental_design.h  genetic_algorithm.h  kNN.h  merit_functions.h  optimizer.h  problem.h  rbf.h  shepard.h  surrogate.h  test_problems.h  utils.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_adaptive.cpp
